# task

./: README.md  stack.yaml  task.cabal
src/: ProgressBar.hs  Task.hs
src/Turtle/: Concurrent.hs  ProgressBar.hs  Task.hs
