name:                task
version:             0.1.0.0
homepage:            http://github.com/mitchellwrosen/task
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Turtle.Concurrent
                     , Turtle.Task
  other-modules:       Turtle.ProgressBar
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal
                     , async
                     , bytestring
                     , cereal
                     , concurrent-extra
                     , concurrent-output
                     , directory
                     , filepath
                     , hashable
                     , managed
                     , process
                     , random
                     , stm
                     , text
                     , time
                     , turtle
  ghc-options:       -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitchellwrosen/task
